--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,7 @@
 
     function init() {
         const timeout = setTimeout(function() {location.reload();}, 10000)
+        settings_init();
         rowPosition = 1;
         colPosition = 1;
         stopWatchActive = false;
